--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         background: url('assets/images/Tezcatlipoca\ Titleart.png') no-repeat center center/cover;
     }
     .mas::before{
-        background: url('assets/images/screenshots/1.png')no-repeat center center/cover;
+        background: url('assets/images/screenshots/5.jpeg')no-repeat center center/cover;
     }
     </style>
 </head>
