--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     .mas::before{
         background: url('assets/images/screenshots/5.jpeg')no-repeat center center/cover;
     }
+    .carousel-container{
+        background: url(assets/images/noise.gif) center/cover;
+    }
     </style>
 </head>
 <body>
