--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tezcatlipoca</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="assets/images/Logos/Tezcatlipoca Titleartbg.png" type="image/x-icon">
     <style>
     .hero {
         background: url('assets/images/Tezcatlipoca\ Titleart.png') no-repeat center center/cover;
