--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                 <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a> 
                 <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a> 
                 <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a> 
-                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a> 
             -->
+                <a href="https://www.youtube.com/@LuQuiGamesMX" target="_blank"><i class="fab fa-youtube"></i></a> 
                 <a href="https://discord.com/invite/xrNR8zHPbZ" target="_blank"><i class="fab fa-discord"></i></a> 
             </div>
             
